--- a/Italian/main/FileExplorer.apk/res/values-it/strings.xml
+++ b/Italian/main/FileExplorer.apk/res/values-it/strings.xml
@@ -22,6 +22,7 @@
     <string name="operation_copy">Copia</string>
     <string name="operation_paste">Incolla</string>
     <string name="operation_move">Sposta</string>
+    <string name="operation_save">Salva</string>
     <string name="operation_send">Invia</string>
     <string name="operation_rename">Rinomina</string>
     <string name="operation_delete">Elimina</string>
@@ -48,7 +49,6 @@
     <string name="category_favorite">Preferiti</string>
     <string name="category_bluetooth">Bluetooth</string>
     <string name="category_log">Log</string>
-    <string name="category_mirouter">MiRouter</string>
     <string name="operation_rename_message">Inserire un nome</string>
     <string name="operation_create_folder_message">Inserire nome cartella</string>
     <string name="operation_delete_confirm_message">"Confermare l'eliminazione?"</string>
@@ -96,7 +96,6 @@
     <string name="favorite_ringtone">Suoneria</string>
     <string name="file_loading">Caricamento…</string>
     <string name="multi_select_title">Seleziona %1$s elemento(i)</string>
-    <string name="tab_networkdisk">MiDrive</string>
     <string name="operation_download_link">Genera li download</string>
     <string name="ui_filechange_btn_download">Scarica file</string>
     <string name="show_message">Il file non può essere aperto se non scaricato</string>
@@ -104,6 +103,7 @@
     <string name="networkView_notConnected">rete non disponibile</string>
     <string name="ui_main_toast_favorite_removed">Preferito(i) rimosso(i)</string>
     <string name="ui_main_toast_operation_failed">Rimozione preferito %1$s fallita.</string>
+    <string name="user_guide">Scopri di più su KuaiPan</string>
     <string name="user_guide">Guida Utente</string>
     <string name="rename_failed">Impossibile rinominare %1$s</string>
     <string name="directory_no_item">Cartella vuota</string>
@@ -123,7 +123,6 @@
     <string name="used">Utilizzato:\u0020</string>
     <string name="loading">Caricamento…</string>
     <string name="load_err">Caricamento fallito</string>
-    <string name="local_cache_size">Dimensione locale della cache: %s</string>
     <string name="net_lose_connected">Rete non disponibile, impossibile determinare dimensione</string>
     <string name="wangpan_root_path">MiDrive</string>
     <string name="kuaipan_over_space">Il tuo MiDrive ha esaurito lo spazio.</string>
@@ -229,7 +228,6 @@ Hai ricevuto %1$s di spazio gratuito"</string>
     <string name="operating">In esecuzione…</string>
     <string name="trans_task">Trasferimento di rete</string>
     <string name="des_running_trans">Restano %1$d file da trasferire</string>
-    <string name="trans_task_delete_confirm_message">Eliminare le %1$d funzioni selezionate?</string>
     <string name="forward_to_web_recycle_prompt">Tocca qui %1$s per aprire il cestino cloud</string>
     <string name="storage_internal">Archivio interno</string>
     <string name="storage_sd_card">Scheda SD</string>
@@ -242,7 +240,6 @@ Hai ricevuto %1$s di spazio gratuito"</string>
     <string name="account_bind_prompt">Migrazione dati utente, il tuo account verrà temporaneamente bloccato, attendere prego…</string>
     <string name="migrate_announcement_title">Migrazione Account</string>
     <string name="migrate_announcement_msg">Se hai un account puoi collegarlo nelle impostazioni e preferenze di accesso.</string>
-    <string name="query_bind_state">Verifica stato collegamento, attendere prego…</string>
     <string name="operation_deleting_detail">Eliminazione (%1$d/%2$d)</string>
     <string name="operation_moving_detail">Spostamento (%1$d/%2$d)</string>
     <string name="operation_copying">Copia…</string>
@@ -264,7 +261,6 @@ Hai ricevuto %1$s di spazio gratuito"</string>
     <string name="petabyteShort">PB</string>
     <string name="fileSizeSuffix">%1$s%2$s</string>
     <string name="tab_local">Locale</string>
-    <string name="tab_sys_size">Totale memoria</string>
     <string name="sys_size_enable">permetti</string>
     <string name="menu_list_name">Menu</string>
     <string name="tools">Strumenti</string>
@@ -307,4 +303,13 @@ Hai ricevuto %1$s di spazio gratuito"</string>
     <string name="share_box_receive">Ricevuti</string>
     <string name="file_not_exist">File inesistente</string>
     <string name="open_file_failed">Apertura fallita</string>
+    <string name="file_already_downlaoded">File salvato in \"%1$s\"</string>
+    <string name="copy_file_to_kuaipan">Copia file su Kuaipan</string>
+    <string name="downloading_in_3g">Download in 3G...</string>
+    <string name="operate_confirm_in_3g">Utilizzare la connessione 3G per scaricare questo file di grande dimensioni?</string>
+    <string name="system_alert">Ricordamelo</string>
+    <string name="network_connect_confirm_des">"L'utilizzo di Kuaipan richiede l'accesso alla rete dati, ok?"</string>
+    <string name="operation_agree">OK</string>
+    <string name="never_notify_network_connect">Non mostrare più</string>
+    <string name="connect_network_setting_des">Chiedilo quando accedo alla rete</string>
 </resources>
