--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2557,6 +2557,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="cancel_alert">Annullare i cambiamenti?</string>
     <string name="android_beam_witch_label">Attiva Android Beam</string>
     <string name="sim_management_title">Gesione SIM</string>
+    <string name="sim_radio_off">Non attivato</string>
     <string name="sim_status_title">Stato SIM</string>
     <string name="slot_status_title">Informazione IMEI</string>
     <string name="next_button_label">Avanti</string>
