--- a/Italian/device/mocha/Settings.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/Settings.apk/res/values-it/strings.xml
@@ -1042,7 +1042,7 @@ Per cancellare musica, foto e altri dati dell'utente, è necessario cancellare i
     <string name="location_access_title">Accesso alla mia posizione</string>
     <string name="location_access_summary">Consenti alle applicazioni che hanno chiesto la tua autorizzazione di utilizzare le informazioni sulla tua posizione</string>
     <string name="location_sources_heading">Fonti di geolocalizzazione</string>
-    <string name="about_settings">Informazioni sul telefono</string>
+    <string name="about_settings">Informazioni sul tablet</string>
     <string name="about_settings_summary">Visualizza informazioni legali, stato, versione del software</string>
     <string name="legal_information">Informazioni legali</string>
     <string name="contributors_title">Collaboratori</string>
@@ -2269,7 +2269,7 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="notification_breathing_light_freq_title">Frequenza lampeggio LED notifiche</string>
     <string name="mms_breathing_light_freq_title">Frequenza lampeggio LED messaggi</string>
     <string name="breathing_light_freq_summary">Lampeggia quando ricevi nuove notifiche</string>
-    <string name="led_settings">LED notifica</string>
+    <string name="led_settings">LED di notifica</string>
     <string name="led_colors_summary">Notifiche</string>
     <string name="led_frequence_summary">"Imposta l'intervallo tra i lampeggi del LED"</string>
     <string name="led_pulse_summary">Lampeggia quando ricevi nuove notifiche</string>
@@ -2717,7 +2717,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="system_app_settings">Applicazioni di sistema</string>
     <string name="connect_to_internet">Rete Wi-Fi</string>
     <string name="wifi_setting_category">Per attivare il tuo dispositivo, connettiti ad Internet</string>
-    <string name="account_autostar_label">Avvio automati</string>
+    <string name="account_autostar_label">Avvio automatico</string>
     <string name="downloading_description">Download in corso…</string>
     <string name="cancel_download_buton_text">Annulla</string>
     <string name="apply_now_button_text">Aggiorna</string>
