--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -22,7 +22,7 @@
     <string name="music_dirac_mode_earbuds">Auricolari Mi</string>
     <string name="music_dirac_mode_piston_100">Mi piston-1</string>
     <string name="music_dirac_mode_general">Generale</string>
-    <string name="music_dirac_mode_general_earbuds">Generale auricolari</string>
+    <string name="music_dirac_mode_general_earbuds">Generali</string>
     <string name="music_dirac_mode_general_inear">In-ear normale</string>
     <string name="music_dirac_mode_piston_2">Mi piston-2</string>
     <string name="music_dirac_mode_piston_youth">Mi piston-youth</string>
