--- a/Italian/device/cancro/FM.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/FM.apk/res/values-it/strings.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Radio</string>
-    <string name="menu_play">Play</string>
-    <string name="menu_edit">Edit</string>
-    <string name="menu_delete">Delete</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_play">Ascolta</string>
+    <string name="menu_edit">Modifica</string>
+    <string name="menu_delete">Elimina</string>
+    <string name="menu_settings">Impostazioni</string>
     <string name="menu_record_start">Inizia registrazione</string>
     <string name="menu_record_stop">Interrompi registrazione</string>
     <string name="menu_sleep">Sospensione</string>
     <string name="menu_sleep_cancel">Annulla sospensione</string>
     <string name="menu_record_list">Lista registrazione</string>
     <string name="menu_scan_start">Scansione</string>
-    <string name="menu_scan_stop">Stop searching</string>
+    <string name="menu_scan_stop">Ferma la scansione</string>
     <string name="menu_new_station">Aggiungi stazione</string>
     <string name="menu_save_station_list">Aggiungi alla lista</string>
     <string name="menu_save_station_presets">Aggiungi alle preselezioni</string>
-    <string name="menu_speaker">Switch to speaker</string>
-    <string name="menu_headset">Switch to headset</string>
+    <string name="menu_speaker">"Passa all'altoparlarte"</string>
+    <string name="menu_headset">Passa alle cuffie</string>
     <string name="menu_exit">Esci</string>
     <string name="title_select_station">Seleziona Stazione - %s</string>
     <string name="menu_stats">FM RF Stats</string>
@@ -155,8 +155,8 @@
     <string name="toast_fm_not_stated">"FM hasn't started yet"</string>
     <string name="toast_fm_error_startfailed">"Registrazione fallita, un'altra applicazione potrebbe utilizzare la funzione di registrazione. Verifica e controlla di nuovo."</string>
     <string name="toast_fm_recorder_access_error">Impossibile registrare in modalità Ospite</string>
-    <string name="fm_has_turned_off">FM has turned off</string>
+    <string name="fm_has_turned_off">La Radio è spenta</string>
     <string name="msg_fm_starting">Starting…</string>
-    <string name="txt_sleep_mode">Sleep mode</string>
+    <string name="txt_sleep_mode">Modalità sospensione</string>
     <string name="txt_divider">" | "</string>
 </resources>
