--- a/Italian/main/Provision.apk/res/values-it/strings.xml
+++ b/Italian/main/Provision.apk/res/values-it/strings.xml
@@ -20,7 +20,7 @@
     <string name="sim_dectection_next">Continua</string>
     <string name="shut_down">Spegni</string>
     <string name="sim_redetection">Verifica nuovamente la presenza della scheda SIM</string>
-    <string name="logo_congratulation">Hai settato tutto!</string>
+    <string name="logo_congratulation">Hai finito!</string>
     <string name="congratulation_label">Goditi il tuo nuovo telefono :)</string>
     <string name="congratulation_next">Inizia a utilizzare MIUI</string>
     <string name="pref_title_voice_slot">Scheda SIM per le chiamate vocali</string>
