Fi XiaomiServiceFramework.apk

--- a/Italian/main/XiaomiServiceFramework.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiServiceFramework.apk/res/values-it/strings.xml
@@ -1,5 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Xiaomi service framework</string>
+    <string name="app_name">Servizi Xiaomi</string>
     <string name="xmsf_activate_info">Attiva informazioni XMSF</string>
+    <string name="activate_phone_failed_notif_title">Impossibile attivare SIM</string>
+    <string name="activate_phone_failed_notif_title_msim">Impossibile avviare MiCloud per la SIM %s</string>
+    <string name="activate_status_title_activating">Attivazione SIM, attendere prego…</string>
+    <string name="activate_status_title_activating_msim">Attivazione SIM %s…</string>
+    <string name="activate_status_desc_wait_for_phone_service">In attesa di servizio telefonico</string>
+    <string name="activate_status_desc_registration">Registrazione scheda SIM</string>
+    <string name="activate_status_desc_registration_server_error">Si è verificato un errore del server durante la registrazione della scheda SIM</string>
+    <string name="activate_status_desc_query_activation_info">Richiesta informazioni attivazioni dal server</string>
+    <string name="activate_status_desc_query_activation_info_no_info">Nessuna informazioni di attivazione sul server</string>
+    <string name="activate_status_desc_query_activation_info_server_error">Si è verificato un errore del server durante la richiesta di informazioni</string>
+    <string name="activate_status_desc_query_activation_info_downlink_sms_error">"Si è verificato un errore nell'invio dell'SMS di attivazione da parte del server"</string>
+    <string name="activate_status_desc_wait_for_sms">"In attesa dell'SMS di attivazione dal server"</string>
+    <string name="activate_status_desc_wait_for_sms_success">SMS di attivazione ricevuto correttamente dal server</string>
+    <string name="activate_status_desc_wait_for_sms_fail">Impossibile ricevere SMS di attivazione dal server</string>
+    <string name="activate_status_desc_request_activation_sms">Richiesta SMS di attivazione dal server verso il tuo telefono</string>
+    <string name="activate_status_desc_request_activation_sms_server_error">"Si è verificato un errore del server durante la richiesta dell'SMS di attivazione"</string>
+    <string name="activate_status_desc_request_activation_sms_phone_error">Il numero di telefono inserito non è valido</string>
+    <string name="activate_status_desc_getting_gateway">Recupero gateway SMS</string>
+    <string name="activate_status_desc_failed_getting_gateway">Impossibile recuperare gateway SMS</string>
+    <string name="activate_status_desc_prepare_sending_sms">Preparazione invio SMS di attivazione al gateway</string>
+    <string name="activate_status_desc_sending_sms">Invio SMS di attivazione al gateway</string>
+    <string name="activate_status_desc_sending_sms_fail">Impossibile inviare SMS al gateway</string>
+    <string name="activate_status_desc_sms_sent">SMS di attivazione inviato correttamente</string>
+    <string name="activate_status_desc_acquire_phone_number">Recupero numero dal server</string>
+    <string name="activate_status_desc_acquire_phone_number_server_error">"Si è verificato un errore del server durante l'acquisizione del numero."</string>
+    <string name="activate_status_desc_acquire_phone_number_server_no_info">Impossibile recuperare il numero.</string>
+    <string name="activate_status_desc_registering_sim_account">Registrazione SIM sul server</string>
+    <string name="activate_status_desc_registering_sim_account_server_error">Si è verificato un errore del server durante la registrazione della SIM</string>
+    <string name="activate_status_desc_checking_xiaomi_account">Verifica account Xiaomi sul server</string>
+    <string name="activate_status_desc_checking_xiaomi_account_server_error">Si è verificato un errore durante la verifica del tuo Mi Account</string>
+    <string name="activate_status_desc_registering_xiaomi_account">Registrazione Mi Account sul server</string>
+    <string name="activate_status_desc_registering_xiaomi_account_server_error">Si è verificato un errore durante la creazione del tuo Mi Account</string>
+    <string name="activate_status_desc_getting_sim_info">Ottieni informazioni scheda SIM</string>
+    <string name="activate_status_desc_getting_sim_info_fail">Non puoi ottenere le informazioni della scheda SIM</string>
+    <string name="sim_unactivated_title">La tua scheda SIM non è attiva</string>
+    <string name="activate_popup_title_manual">Attivazione scheda SIM</string>
+    <string name="activate_popup_desc_sim_card">Ti verrà inviato un SMS per attivare la tua scheda SIM, in modo da poter attivare funzioni come %s (ai costi preisti dal tuo operatore)</string>
+    <string name="activate_popup_desc_intl_sim_card">"Verrà inviato un SMS internazionale per attivare la tua scheda SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_mixed_sim_cards">"Verrà inviato un SMS internazionale per attivare le tue 2 schede SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_2_sim_cards">"2 SMS verranno inviati per attivare le tue 2 schede SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_2_intl_sim_cards">"2 SMS internazionali verranno inviati per attivare la tua scheda SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_sim_card_downlink">Prego inserire il numero della tua scheda SIM, per abilitare feature come %s</string>
+    <string name="activate_popup_title_new_sim_card">Attivazione nuova carta SIM</string>
+    <string name="activate_popup_desc_new_sim_card">"La tua scheda SIM è cambiata. Verrà inviato un SMS per attivare la nuova carta SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_intl_sim_card">"La tua scheda SIM è cambiata. Verrà inviato un SMS per attivare la nuova carta SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_mixed_sim_cards">"Le tue schede SIM sono cambiate. Verranno inviati un SMS normale e un SMS internazionale per attivare le 2 nuove carte SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_2_sim_cards">"Le tue scheda SIM sono cambiate. Verranno inviati due SMS per attivare le 2 nuove carte SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_2_intl_sim_cards">"Le tue schede SIM sono cambiate. Verranno inviati due SMS internazionali per attivare le 2 carte SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_sim_card_downlink">La tua scheda SIM è cambiata. Prego inserire il numero della tua carta SIM, in modo da abilitare feature come %s</string>
+    <string name="activate_popup_title_register_account">Registra account</string>
+    <string name="activate_popup_desc_register_account">Verrà inviato un SMS per registrare il tuo account Xiaomi</string>
+    <string name="activate_popup_desc_register_account_intl">Verrà inviato un SMS internazionale per registrare il tuo account Xiaomi</string>
+    <string name="activate_popup_desc_register_account_downlink">Prego inserire il numero della tua carta SIM,  per registrare il tuo account Xiaomi</string>
+    <string name="activate_popup_title_failed_send_sms">Attivazione fallita</string>
+    <string name="activate_popup_desc_failed_send_sms">"Impossibile inviare l'SMS per l'attivazione. Assicurati che la tua carta SIM sia in servizio."</string>
+    <string name="activate_popup_confirm_failed_send_sms">Rispedisci</string>
+    <string name="activate_popup_title_failed_query_info">Attivazione fallita</string>
+    <string name="activate_popup_desc_failed_query_info">Impossibile acquisire il tuo numero di telefono. Assicurati che la tua carta SIM sia in servizio.</string>
+    <string name="activate_popup_confirm_failed_query_info">Riprova</string>
+    <string name="activate_popup_title_failed_server">Attivazione fallita</string>
+    <string name="activate_popup_desc_failed_server">Errore del server. Per favore verifica la tua connessione alla rete.</string>
+    <string name="activate_popup_confirm_failed_server">Riprova</string>
+    <string name="activate_popup_title_failed_receive_sms">Attivazione fallita</string>
+    <string name="activate_popup_desc_failed_receive_sms">Prego verifica due volte il numero che hai inserito, e assicurati che la tua carta SIM sia in servizio.</string>
+    <string name="activate_popup_confirm_failed_receive_sms">Riprova</string>
+    <string name="activate_popup_title_failed_phone_error">Attivazione fallita</string>
+    <string name="activate_popup_desc_failed_phone_error">Il numero che hai inserito non è valido</string>
+    <string name="activate_popup_confirm_failed_phone_error">Riprova</string>
+    <string name="activate_feature_mx">Messaggi cloud gratuiti</string>
+    <string name="activate_feature_mms_sync">Sync SMS</string>
+    <string name="activate_feature_call_log_sync">Sync registro chiamate</string>
+    <string name="activate_feature_find_device">Trova dispositivo</string>
 </resources>
