--- a/Italian/device/mocha/Browser.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/Browser.apk/res/values-it/strings.xml
@@ -498,13 +498,12 @@
     <string name="readmode_recommend">Mostra i suggerimenti</string>
     <string name="readmode_refresh">Aggiorna</string>
     <string name="miui_startpage">Pagina iniziale</string>
-    <string name="dont_remind_again">"don't remind again"</string>
-    <string name="show_check_security_url_check_tip_dialog_title">Security URL check tip</string>
-    <string name="show_check_security_url_check_tip_dialog_description">In order to protect the security of your Internet browser to access the site, the current URL will be submit to the server to detects its security, If you do not need this feature, turn off the Security URL check in the settings can be</string>
-    <string name="pref_check_security_url">Security URL</string>
-    <string name="pref_check_security_url_title">Security URL check</string>
-    <string name="pref_check_security_url_summary">Submit current URL when accessing a Web site to the server detects its security</string>
-
+    <string name="dont_remind_again">Non ricordare di nuovo</string>
+    <string name="show_check_security_url_check_tip_dialog_title">Sicurezza URL</string>
+    <string name="show_check_security_url_check_tip_dialog_description">"L'indirzzo di questo sito verrà inviato ai server Xiaomi per verificarne la sicurezza. Puoi disattivare questa funzione nelle Impostazioni."</string>
+    <string name="pref_check_security_url">Sicurezza URL</string>
+    <string name="pref_check_security_url_title">Verifica sicurezza URL</string>
+    <string name="pref_check_security_url_summary">Invia ai server Xiaomiper verificarne la sicurezza</string>
     <string name="download_failed">Download fallito</string>
     <string name="download_complete">Download completato</string>
     <string name="app_update_install">"Nuova versione scaricata e pronta per l'installazione"</string>
