--- a/Italian/main/CloudService.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudService.apk/res/values-it/strings.xml
@@ -110,4 +110,48 @@ Per rimediare a questo, puoi cancellare qualche vecchio file per fare spazio per
     <string name="sync_sub_2_sms">Verranno inviati due SMS per associare la tua carta SIM a questo account. Ti saranno addebitati i costi previsti dal tuo contratto.</string>
     <string name="sync_sub_2_intl_sms">Verranno inviati due SMS internazionali per associare la tua carta SIM a questo account. Ti saranno addebitati i costi previsti dal tuo contratto.</string>
     <string name="sync_sub_1_sms_1_intl_sms">Verranno inviati un SMS internazionali e uno nazionale per associare la tua carta SIM a questo account. Ti saranno addebitati i costi previsti dal tuo contratto.</string>
+    <string name="sync_setting">Sync settings</string>
+    <string name="less_flow_mode">Data saver</string>
+    <string name="sync_standard">Sync the small stuff</string>
+    <string name="only_in_wlan">Only use WLAN to sync</string>
+    <string name="cloud_sync_setting_summary_standard">Use your mobile data connection to sync SMS, Contacts info, and call logs. Use WLAN to sync photos, videos, MMS, app data, Contact profile photos, and more.</string>
+    <string name="cloud_sync_setting_summary_wlan">Only sync when connected to WLAN</string>
+    <string name="sync_item_calllog_title">Sync call logs</string>
+    <string name="sync_item_calllog_summary">Sync records of calls made and received on this phone</string>
+    <string name="storage">Storage</string>
+    <string name="data_syncing">Always sync</string>
+    <string name="wifi_sync">Wait for WLAN</string>
+    <string name="setting">Settings</string>
+    <string name="current">Current</string>
+    <string name="flight_mode">Airplane mode</string>
+    <string name="internet_disconnected">No data connection</string>
+    <string name="internet">Internet</string>
+    <string name="full_space">Not enough space</string>
+    <string name="space">Storage</string>
+    <string name="system_sync_off">System sync off</string>
+    <string name="sync">Sync</string>
+    <string name="app_sync_off">App sync off</string>
+    <string name="micloud">Mi Cloud</string>
+    <string name="wifi_disconnected">No WLAN</string>
+    <string name="wifi">WLAN</string>
+    <string name="detail">Details</string>
+    <string name="normal">Normal</string>
+    <string name="finish">Finish</string>
+    <string name="remind_later">Remind me later</string>
+    <string name="enable_cloud_service_notification">"You haven't enabled Mi Cloud"</string>
+    <string name="contact">Contacts</string>
+    <string name="sms">SMS</string>
+    <string name="photo">Photos</string>
+    <string name="micloud_first_login_title" />
+    <string name="micloud_first_login_summary" />
+    <string name="micloud_unlogin_for_time_title">Enable Mi Cloud</string>
+    <string name="micloud_unlogin_for_time_summary" />
+    <string name="micloud_main_sync_stop">Stop sync</string>
+    <string name="micloud_main_stop_sync">Stop sync</string>
+    <string name="micloud_main_suggest_sync">Some items need to be synced with your Mi Cloud.</string>
+    <string name="micloud_main_sync_now">Sync now</string>
+    <string name="micloud_main_network_error">"Can't connect to the network. Check your network settings and try again."</string>
+    <string name="micloud_main_sync_on_wifi">Use WLAN</string>
+    <string name="micloud_main_data_unsynced">%d not synced</string>
+    <string name="micloud_main_last_sync_time">Last sync</string>
 </resources>
